# iudex0

./: .gitignore  ARQUITETURA_MELHORADA.md  BACKEND_COMPLETO.md  BATCH_PROCESSOR_GUIDE.md  CHECKLIST_BACKEND.md  CLAUDE.md  COMO_REINICIAR_FRONTEND.md  CORRECAO_ACESSO_PAGINA.md  CORRECAO_ENDPOINT_ME.md  CORRECAO_LOGIN_REGISTRO.md  CORRECAO_METHOD_NOT_ALLOWED.md  CORRECOES_IMPLEMENTADAS.md  ENTREGA_FRONTEND.md  FRONTEND_COMPLETO.md  FUNCIONALIDADES_MOCKADAS.md  GUIA_DEBUG_LOGIN.md  GUIA_IMPLEMENTACAO_TECNICA.md  GUIA_RAPIDO.md  GUIA_RAPIDO_TESTE.md  GUIA_STREAMING_MULTIAGENTE.md  GUIA_TESTE.md  IMPLEMENTACAO.md  INDEX.md  INTEGRACAO.md  INVENTARIO_CHAT_ASSISTENTE_AGENTES.md  LICENSE  LOGIN_TESTE_FIX.md  MELHORIAS_IMPLEMENTADAS.md  MIGRATION_GUIDE.md  NOVIDADES_V0.3.md  PLANO_IMPLEMENTACAO_COMPLETO.md  PLAN_MINUTA_IA_INTEGRATION.md  PROBLEMA_REGISTRO.md  PROXIMOS_PASSOS.md  Processocivil.txt  QUICKSTART.md  README.md  REFERENCIA_TRANSCRIWISE.txt  RELATORIO_BACKEND_PENDENTE.md  RESUMO_FINAL.md  (+137 more)
apps/api/: .env.example  .env.production.example  README.md  SETUP.md  alembic.ini  docker-compose.rag.yml  file::memory:  main.py  pyproject.toml  reproduce_visitor_login.py  requirements-minimal.txt  requirements.txt  temp_154680d2_ASR_c34c8125.json  temp_6822a305_ASR_c34c8125.json  temp_7832b718_ASR_c34c8125.json  temp_9aa560d6_ASR_c34c8125.json  temp_df12d61a_ASR_c34c8125.json  temp_e387c4f3_ASR_c34c8125.json  temp_e785c3aa_ASR_c34c8125.json  test_gemini.py  test_openai.py  test_sse.py  test_stream_token_contract.py  test_vertex.py  test_vertex_mlx.py
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/data/: jurisprudence_database.json  legislation_database.json
apps/api/examples/: __init__.py  usage_example.py
apps/api/scripts/: bench_embedding_providers.py  bench_rag_latency.py  benchmark_neo4j_ingest.py  check_db.py  check_deep_research_stream.py  cleanup_workflow_documents.py  dev-api-tunnel.sh  dev-neo4j.sh  eval_rag_ragas.py  fix_semantic_relationships.py  install_dependencies.sh  migrate_arguments_to_neo4j.py  migrate_database.py  migrate_qdrant_to_routed_collection.py  neo4j_hybrid_migrate.py  rag_real_world_smoke.py  (+2 more)
apps/neo4j-rag/: Makefile  pyproject.toml
(+1355 files in other folders)
